# stirlingmobile

./: .gitignore  Makefile  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/benchmark/: build.gradle.kts
app/libs/: ppocr-sdk-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/java/com/stirlingmobile/: MainActivity.kt
app/src/main/java/com/stirlingmobile/ui/: AddTextScreen.kt  AddTextViewModel.kt  AnnotationsScreen.kt  AnnotationsViewModel.kt  AutoRedactScreen.kt  AutoRedactViewModel.kt  CompareScreen.kt  CompareViewModel.kt  (+70 more)
app/src/main/java/uniffi/stirling_engine/: stirling_engine.kt
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-id/: strings.xml
app/src/main/res/values-pt/: strings.xml
docs/: 00-spec.md  01-architecture.md  02-tech-stack.md  03-jni-contract.md  04-feature-catalog.md  05-ui-design.md  06-data-model.md  07-performance-budget.md  08-testing-strategy.md  09-security.md  10-i18n.md  11-roadmap.md  12-dev-environment.md  13-contributing.md  14-risk-register.md  15-glossary.md  16-playstore-checklist.md  17-track-a-native-tools-status.md
docs/adr/: 001-rust-engine.md  002-collabora-office.md  003-qpdf-rewrite.md  004-webview-html-pdf.md  005-kotlin-compose.md  006-module-boundaries.md  007-file-storage.md
docs/plans/: 2026-07-04-forms-design.md  2026-07-04-forms-plan.md
engine/: Cargo.toml  build.rs
engine/src/: add_text.rs  annotations.rs  auto_redact.rs  cms_sign.rs  compare.rs  compress.rs  content_util.rs  convert.rs  convert_html.rs  convert_xml.rs  dedupe_pages.rs  draw.rs  extract_images.rs  forms.rs  icc_srgb.rs  info.rs  lib.rs  markdown.rs  merge.rs  metadata.rs  ocr.rs  optimize.rs  overlay.rs  page_numbers.rs  pages.rs  pdfa.rs  pfx.rs  pfx_generate.rs  rasterize.rs  redact.rs  rotate.rs  sanitize.rs  security.rs  sign.rs  split.rs  stamp.rs  watermark.rs
engine/tests/: stress.rs
(+1 files in other folders)
