[package]
name = "stirling_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "stirling_engine"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
lopdf = "0.34"
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
flate2 = "1.0"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
md-5 = "0.10"
getrandom = "0.2"
pdfium-render = "0.8"
pulldown-cmark = "0.12"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
