[package]
name = "stirling_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "stirling_engine"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
lopdf = "0.34"
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "2.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
flate2 = "1.0"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
md-5 = "0.10"
getrandom = "0.2"
pdfium-render = "0.8"
pulldown-cmark = "0.12"
p12 = "0.6.3"
cms = { version = "0.2.3", features = ["builder", "std", "rsa", "sha2"] }
x509-cert = "0.2.5"
rsa = "0.9.10"
rcgen = { version = "0.14.8", features = ["pem"] }
secrecy = "0.10.3"
der = "0.7"
signature = "2"
spki = "0.7"
sha2 = { version = "0.10", features = ["oid"] }
const-oid = { version = "0.9", features = ["db"] }
pkcs8 = { version = "0.10", features = ["encryption", "3des"] }
yasna = "0.5"
pkcs5 = { version = "0.7", features = ["pbes2", "3des", "alloc"] }
rustls-pki-types = "1.15.0"
rand = "0.8"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

